WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
30461
[chromium] Video controls not zoomed / transformed correctly
https://bugs.webkit.org/show_bug.cgi?id=30461
Summary
[chromium] Video controls not zoomed / transformed correctly
Hin-Chung Lam
Reported
2009-10-16 14:35:04 PDT
The following two layout tests are failing in Chromium: LayoutTests/media/video-controls-zoomed.html LayoutTests/media/video-controls-transformed.html They are failing because the images for play / pause / mute / slider thumb are not scaled correctly.
Attachments
Patch
(2.46 KB, patch)
2009-10-16 18:48 PDT
,
Hin-Chung Lam
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Hin-Chung Lam
Comment 1
2009-10-16 18:48:45 PDT
Created
attachment 41345
[details]
Patch This patch will scale the images correctly.
Eric Seidel (no email)
Comment 2
2009-10-16 23:32:45 PDT
CCing mr. media.
Eric Seidel (no email)
Comment 3
2009-10-16 23:33:04 PDT
Comment on
attachment 41345
[details]
Patch Looks sane to me.
WebKit Commit Bot
Comment 4
2009-10-17 08:45:41 PDT
Comment on
attachment 41345
[details]
Patch Clearing flags on attachment: 41345 Committed
r49740
: <
http://trac.webkit.org/changeset/49740
>
WebKit Commit Bot
Comment 5
2009-10-17 08:45:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug