2009-10-17  Alpha Lam  <hclam@chromium.org>

Reviewed by Eric Seidel.

        [chromium] Video controls not zoomed / transformed correctly
        https://bugs.webkit.org/show_bug.cgi?id=30461

        Draw the images in the controls scaled.

        No new tests. With this change Chromium will pass the following tests:
        LayoutTests/media/video-controls-zoomed.html
        LayoutTests/media/video-controls-transformed.html

        * rendering/RenderMediaControlsChromium.cpp:
        (WebCore::paintMediaButton):
        Pass along the target rect directly.
        (WebCore::RenderMediaControlsChromium::adjustMediaSliderThumbSize):
        Adjust the thumb slide applied with the scale factor.

Canonical link: https://commits.webkit.org/41196@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@49740 268f45cc-cd09-0410-ab3c-d52691b4dbfc